[package]
name = "rsAutoTor"
version = "0.2.0"
authors = ["ryzeon-dev"]
description = "Automatic TOR network IP changer"
edition = "2021"
readme = "README.md" 
license = "AGPL-3.0-or-later"
repository = "https://github.com/ryzeon-dev/rsAutoTor"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.46"
rsjson = "0.2.1"
